[gd_scene load_steps=8 format=3 uid="uid://cree8mkwfelac"]

[ext_resource type="Script" uid="uid://6g1ejwwcsb20" path="res://NPCs/Mobs/Bosses/tree.gd" id="1_wk3wo"]
[ext_resource type="Texture2D" uid="uid://jn07y7535nl1" path="res://NPCs/Mobs/BossAttacks/tree_growth_1.png" id="2_wk3wo"]
[ext_resource type="Texture2D" uid="uid://cnp7gmexea381" path="res://NPCs/Mobs/BossAttacks/tree_growth_2.png" id="3_1e1nt"]
[ext_resource type="Texture2D" uid="uid://0rsqqcsu5ivn" path="res://NPCs/Mobs/BossAttacks/tree_growth_3.png" id="4_m6que"]
[ext_resource type="Texture2D" uid="uid://dciwqbv2a71el" path="res://NPCs/Mobs/BossAttacks/tree_growth_4.png" id="5_iexqs"]
[ext_resource type="Texture2D" uid="uid://cdauynqa51vf3" path="res://NPCs/Mobs/BossAttacks/pngimg.com - tree_PNG2517.png" id="6_cclkx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nttn2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wk3wo")
}, {
"duration": 1.0,
"texture": ExtResource("3_1e1nt")
}, {
"duration": 1.0,
"texture": ExtResource("4_m6que")
}, {
"duration": 1.0,
"texture": ExtResource("5_iexqs")
}, {
"duration": 1.0,
"texture": ExtResource("6_cclkx")
}],
"loop": false,
"name": &"default",
"speed": 9.0
}]

[node name="Tree" type="Node2D"]
script = ExtResource("1_wk3wo")
metadata/_custom_type_script = "uid://u4hlhq7vgeit"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_nttn2")
frame = 4
frame_progress = 1.0

[node name="LiveTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.5, 0.5)
collision_layer = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(114.5, -239.7, 109.5, -241.4, 109.5, -239.9, 104.5, -238.8, 101.6, -239, 98.1, -239, 96.1, -237, 91.5, -237, 91.5, -238.4, 86.5, -236.7, 86.5, -236, 82.5, -236, 82.5, -235.2, 75.5, -235.9, 75.5, -237, 71.9, -237, 70.9, -235, 69.5, -236.4, 69.5, -238.2, 63.3, -237, 61.5, -238.4, 61.5, -240.3, 55.5, -238.8, 52.6, -239, 49.3, -239, 46.5, -237.6, 46.5, -237, 38.1, -237, 35.5, -234.4, 27.9, -234, 26.9, -232, 25.8, -232, 25.3, -230.8, 26.5, -229.6, 26.5, -229, 23.9, -229, 22.9, -227, 20.9, -227, 22.5, -223.8, 20.5, -222.6, 20.5, -218.6, 22.1, -217, 22.9, -217, 22.5, -216.2, 22.5, -213.6, 18.5, -211.6, 18.5, -210, 15.5, -210, 15.5, -211, 12.5, -211, 12.5, -212.2, 5.29999, -211, 2, -211, -1, -207, -2.5, -207, -2.5, -200.9, -6.5, -203.6, -6.5, -205, -10.1, -205, -11.1, -203, -12, -203, -14.5, -206.4, -14.5, -207.7, -15.7, -208.2, -16.9, -207, -19.1, -207, -19.5, -207.4, -19.5, -208.8, -23.5, -209.8, -23.5, -210.7, -24.7, -211.2, -26.9, -209, -26.5, -210.8, -26.5, -212.6, -28.5, -213.6, -28.5, -215.4, -32.5, -214, -34.3, -214, -35.5, -214.6, -35.5, -216, -38.5, -216, -38.5, -216.7, -39.7, -217.2, -41.5, -215.4, -41.5, -219.3, -44.5, -223.4, -44.5, -225.5, -51.5, -222.7, -51.5, -224, -53.5, -224, -53.5, -225.6, -59.5, -222.6, -59.5, -220.6, -60.3, -221, -64.1, -221, -65.1, -219, -68.2, -221, -71.9, -221, -73.5, -219.4, -73.5, -217.7, -76.5, -216.7, -77.3, -217, -79.9, -217, -82.5, -214.4, -82.5, -215.4, -86.5, -214.1, -86.5, -220.4, -90.1, -224, -91.9, -224, -96.9, -220, -99.1, -220, -97.5, -216.8, -98.9, -215, -101, -215, -104, -211, -104.5, -211.6, -106.5, -212.6, -106.5, -213.7, -107.7, -214.2, -108.9, -213, -109.8, -213, -110.5, -215, -110.5, -217, -113.9, -217, -117.5, -213.4, -121.5, -214.7, -121.5, -215.6, -122.6, -216.2, -127.5, -212.5, -127.5, -210.4, -131.5, -211.7, -131.5, -213, -140.5, -213, -140.5, -207.6, -141.3, -208, -142.9, -208, -145.5, -205.4, -145.5, -203.4, -146.5, -203.7, -146.5, -205, -151.1, -205, -152.1, -203, -155.1, -203, -156.1, -201, -157.5, -201, -157.5, -192, -162.9, -192, -164.5, -190.4, -164.5, -189, -167.1, -189, -168.1, -187, -170.1, -187, -168.5, -183.8, -171.7, -182, -173.5, -182, -173.5, -177.4, -174.9, -176, -176.2, -176, -176.7, -174.8, -175.5, -173.6, -177.5, -170.3, -177.5, -168.4, -175.7, -167.5, -179.5, -165.6, -179.5, -162.8, -182.7, -162, -183.9, -164, -186.8, -164, -190.5, -161.3, -190.5, -167.7, -193.5, -168.7, -193.5, -170.6, -199.5, -167.6, -199.5, -163.7, -203.5, -162.2, -204.9, -165, -207.9, -165, -212.9, -160, -214.5, -160, -214.5, -156.4, -214.9, -156, -216.5, -156, -216.5, -153.6, -218.5, -152.6, -218.5, -148.6, -220.5, -147.6, -220.5, -146, -222.8, -146, -223.5, -148, -223.5, -150.4, -228.5, -148.7, -228.5, -148, -231.9, -148, -232.9, -150, -236.9, -150, -238.5, -148.4, -238.5, -143.6, -239.7, -143, -241.5, -143, -241.5, -139.4, -237.5, -137.4, -242, -137, -244, -134, -246.3, -134, -247.5, -128.1, -252.1, -127, -254.1, -127, -255.1, -125, -258.1, -125, -260.1, -121, -262.9, -121, -264.5, -119.4, -264.5, -117.9, -270, -116.9, -272.9, -117, -276.5, -113.4, -280.9, -113, -279.5, -109, -279.5, -108.4, -279.9, -108, -281.5, -108, -281.5, -103, -282.5, -103, -282.5, -99.4, -280.7, -98.5, -284.5, -96.6, -284.5, -94.6, -281.9, -92, -280.9, -92, -281.5, -91.4, -281.5, -88, -280.5, -88, -280.5, -85.3, -277.5, -84.4, -281.5, -80.4, -281.5, -74.6, -279.9, -73, -278, -73, -276.5, -70.7, -276.5, -69.3, -275.3, -68.8, -274.3, -69.9, -273.5, -67, -275.9, -67, -279.5, -63.4, -281.2, -64, -283.8, -64, -288.5, -60.5, -288.5, -57.7, -286, -54, -283.5, -54, -283.5, -52.6, -281.9, -51, -279, -51, -277.5, -48.7, -277.5, -48, -281.5, -48, -281.5, -43, -282.5, -44.2, -282.5, -46.5, -289.5, -43.7, -289.5, -45, -294.9, -45, -297.9, -42, -300.1, -42, -298.4, -38.6, -298.5, -38, -306.5, -38, -306.5, -36, -307.9, -38, -312.2, -38, -314.5, -32.2, -314.5, -29.2, -312.3, -28.7, -314.5, -26.4, -314.5, -24.7, -317.5, -23.7, -317.5, -18, -312.5, -18, -312.5, -13.2, -314.1, -10, -315.5, -10, -315.5, 4.39999, -313.9, 6, -313.5, 12.3, -312.4, 14, -315.9, 14, -317.4, 15.4, -318.3, 15, -321.1, 15, -322, 16.8, -322.5, 15.8, -322.5, 14.2, -327.4, 13, -330.8, 13, -334.5, 15.5, -339.5, 15.1, -339.5, 13.7, -345.5, 15.2, -345.5, 17.8, -349.5, 17.1, -349.5, 15.4, -353.5, 17.4, -353.5, 18, -362.1, 18, -367, 26, -368.5, 26, -368.5, 29.7, -365.5, 30.6, -365.5, 31.6, -369.5, 35.6, -370.9, 36, -372.9, 38, -374.7, 38, -373.3, 45, -372, 45, -373.2, 48, -374.2, 48, -374.7, 49.2, -373.8, 50.1, -380.6, 51, -382.5, 51, -382.5, 54.6, -380.5, 55.6, -380.5, 59.5, -376.5, 62.5, -376.5, 64, -369.8, 64, -370.3, 66, -371.5, 66, -371.5, 69.6, -369.5, 70.6, -369.5, 71.7, -371, 74, -372.5, 74, -372.5, 79.4, -368.5, 83.4, -368.5, 85, -362.8, 85, -361.8, 82, -358.8, 82, -355.8, 84, -353.1, 84, -352.1, 86, -348.9, 86, -343.5, 75.2, -340.9, 75, -340.5, 75.4, -340.5, 77, -338.5, 77, -338.5, 77.7, -337.5, 78.1, -337.5, 79.4, -335.9, 81, -335.2, 81, -333.2, 86, -332.4, 86, -331.3, 92, -332.6, 92, -331.5, 102.1, -331.5, 105.5, -327.8, 108, -327.5, 109.5, -322.5, 113.4, -322.5, 115.2, -315.5, 113.8, -315.5, 112.9, -312.8, 115, -309, 115, -305.5, 110.3, -302.6, 111, -300.5, 111, -300.5, 115.4, -298.9, 117, -298.5, 118.2, -296.5, 123.1, -296.5, 125, -284.9, 125, -283.9, 123, -280.1, 123, -277.1, 120, -275.5, 120, -275.5, 117, -267.1, 117, -259, 110, -257.8, 110, -255.8, 105, -253.9, 105, -253.5, 105.4, -253.5, 107, -250.5, 107, -250.5, 109.3, -255.5, 111.3, -255.5, 115.4, -253.9, 117, -252.5, 117, -252.5, 118.6, -250.5, 119.6, -250.5, 120.7, -249.3, 121.2, -246.1, 118, -243.5, 119.5, -243.5, 120.7, -242.3, 121.2, -241.1, 120, -240.1, 120, -239.1, 122, -236.1, 122, -235.1, 124, -233, 124, -227, 116, -225.9, 116, -225.3, 114.9, -227.3, 112, -221.8, 112, -220.9, 109, -220.5, 109.4, -220.5, 111.6, -217.3, 110, -210.5, 113.6, -210.5, 115, -202.7, 115, -189.5, 120.6, -189.5, 122, -183.6, 122, -175.7, 125, -173.5, 125, -173.5, 128.6, -171.5, 129.6, -171.5, 131.6, -168.3, 130, -167.5, 130.4, -167.5, 132, -165.5, 132, -165.5, 132.7, -164.3, 133.2, -163.1, 132, -161.5, 132, -161.5, 131.1, -160.5, 131.6, -160.5, 133.6, -157.3, 132, -156, 132, -153, 136, -149.7, 136, -148.8, 132.3, -146, 136, -142.1, 136, -140.1, 134, -138.5, 134, -138.5, 133, -138.2, 134, -136.8, 134, -137.2, 135, -138.5, 135, -138.5, 144.6, -133.5, 147.6, -133.5, 149, -128.5, 149, -128.5, 150.6, -125.1, 148.8, -122.9, 149, -121.9, 147, -120.8, 147, -120.3, 145.8, -122.5, 143.6, -122.5, 141.5, -116, 136, -114.5, 136, -114.5, 129.6, -112.5, 128.6, -112.5, 126.6, -108.5, 124.6, -108.5, 124, -104.5, 129.3, -104.5, 131.6, -101.3, 130, -98.9, 130, -100.4, 127, -98.9, 127, -98.5, 126.2, -96.9, 128, -94.9, 128, -93.5, 129.4, -93.5, 131.6, -88.7, 134, -85.1, 134, -78, 128, -75.9, 128, -77.5, 124.9, -75.8, 126, -72.9, 126, -71.9, 124, -67.9, 124, -66, 120.2, -65.5, 121.2, -65.5, 123.5, -60.5, 127.4, -60.5, 128.8, -55.6, 130, -52.8, 130, -50.5, 131.5, -50.5, 132.7, -42.7, 136, -39.8, 136, -33.8, 140, -31.9, 140, -23.9, 149, -23.2, 149, -22.2, 152, -21.3, 152, -19.3, 160, -18.5, 160, -18.5, 166, -17.5, 166, -16.5, 219, -16.5, 228.6, -19.5, 232.7, -19.5, 234.4, -22.5, 236.5, -22.5, 237.4, -34.5, 243.4, -34.5, 244.1, -41.5, 245.1, -41.5, 246, -96.5, 248, -105.7, 248, -109.7, 250, -113.9, 250, -116.9, 253, -118.2, 253, -118.7, 254.2, -116.5, 256.4, -116.5, 258, -112.5, 258, -112.5, 259, 40.5, 259.9, 111.6, 260, 116.7, 259, 119.9, 259, 123.5, 255.4, 123.5, 253.4, 121.5, 252.4, 121.5, 251, 115.5, 251, 115.5, 250.1, 48.5, 246, 34.8, 246, 30.8, 243, 29.1, 243, 27.1, 239, 26.4, 239, 20.5, 196.9, 20.5, 174, 21.5, 174, 21.5, 170.4, 32.9, 159, 34.9, 159, 53.9, 139, 55.5, 139, 55.5, 132.3, 61, 124, 62.1, 124, 62.7, 122.9, 61.4, 121, 65.1, 121, 66, 119.2, 66.9, 121, 70, 121, 73.5, 116.3, 77.5, 116, 80.3, 117, 82.9, 117, 83.6, 118.4, 83.5, 121.4, 85.5, 123.4, 85.5, 125, 89, 125, 89.5, 124.2, 89.5, 126.4, 92.9, 129.8, 92.5, 130.8, 92.5, 132.4, 95.1, 135, 97.9, 135, 100.9, 132, 102.5, 132, 102.5, 130, 103.5, 130, 103.5, 125.4, 101.5, 124.4, 101.5, 122.6, 102.7, 122, 104.5, 122, 104.5, 117, 108, 117, 111.5, 112.3, 115.9, 112, 118.5, 109.4, 118.5, 107.8, 122.5, 106.8, 122.5, 104.6, 125.3, 106, 127.8, 106, 132.5, 102.5, 132.5, 99.6, 134.5, 99, 138.9, 99, 141.3, 96.5, 142.3, 97, 145.5, 97, 145.5, 99.3, 142.5, 100.3, 142.5, 102.4, 144.1, 104, 145.5, 104, 145.5, 106.6, 147.5, 107.6, 147.5, 109, 151.1, 109, 150.5, 109.6, 146.8, 110, 146.3, 111.2, 147.5, 112.4, 147.5, 114, 149.5, 114, 144.5, 118.5, 144.5, 120.7, 147.5, 121.6, 147.5, 125.4, 149.1, 127, 151.9, 127, 154.9, 124, 156.2, 124, 157.2, 121, 157.9, 121, 163.9, 132, 164.9, 132, 164.5, 132.8, 164.5, 134.5, 168.5, 137.5, 167.6, 138.4, 167.5, 137, 161.1, 137, 158.5, 139.6, 158.5, 144.2, 160.5, 148.2, 160.5, 151.8, 165.5, 152.8, 165.5, 153.7, 166.7, 154.2, 167.9, 153, 167.5, 154.8, 167.5, 159.7, 170.5, 160.6, 170.5, 162.6, 175.9, 159.8, 177.9, 160, 179.5, 158.4, 179.5, 157.8, 186.5, 155.8, 186.5, 155, 188.5, 155, 188.5, 161.5, 195.5, 158.7, 195.5, 158, 198.1, 158, 199.1, 156, 200.5, 156.6, 200.5, 158.6, 203.7, 157, 204.9, 157, 205.5, 158.2, 205.5, 160.6, 208.7, 159, 209.8, 159, 210.5, 161, 210.5, 163.6, 213.7, 162, 218.5, 162, 218.5, 154, 221.1, 154, 223.1, 150, 225.1, 150, 223.3, 146.5, 224.5, 145.4, 224.5, 142.5, 221.5, 140.5, 227.5, 136.5, 227.9, 136, 227.5, 136.8, 227.5, 139.6, 229.5, 140.6, 229.5, 141.7, 230.7, 142.2, 231.9, 141, 237.4, 141, 238.4, 133.2, 239, 134, 239.5, 136, 240.5, 136, 240.5, 142.7, 241.7, 143.2, 243.9, 141, 245.4, 141, 252.5, 143.6, 252.5, 145.6, 255.7, 144, 256.8, 144, 257.5, 146, 257.5, 148, 262.6, 148, 261.5, 149.7, 261.5, 152.4, 265.5, 156.4, 265.5, 158.6, 268.7, 157, 273.1, 157, 276.4, 150.2, 279.4, 151, 282.9, 151, 284.9, 149, 286.5, 149, 286.5, 139.6, 284.9, 138, 284.5, 136, 285.1, 136, 285.7, 134.9, 283.5, 131.6, 286.5, 130.7, 286.5, 130, 290.5, 130, 290.5, 132.6, 294.9, 134.8, 294.5, 135.8, 294.5, 139, 298.9, 139, 299.5, 140.2, 299.5, 142.6, 302.7, 141, 306.1, 141, 307.1, 139, 310.2, 139, 313.5, 141.5, 313.5, 143.2, 319.7, 142, 321.2, 142, 325.2, 145, 328.2, 145, 329.1, 142, 332.1, 145, 333.9, 145, 335.5, 143.4, 335.5, 137.7, 333.3, 134.5, 333.9, 134, 336.1, 134, 335.1, 132, 337.7, 132, 342.5, 129.6, 348.7, 127, 351.1, 127, 349.1, 123, 349.5, 118.1, 349.5, 114.6, 346.4, 111.5, 346.5, 109.6, 344.9, 108, 344.3, 108, 343.3, 103, 343.5, 101.2, 343.5, 99.6, 345.5, 98.6, 345.5, 98, 349.5, 98, 349.5, 93.3, 350.5, 93.6, 350.5, 95, 357.1, 95, 358.1, 93, 363, 93, 366, 89, 367.5, 89, 373.5, 87.8, 373.5, 87, 380.1, 87, 375.1, 77, 373.8, 77, 374.5, 74.1, 374.5, 71.4, 372.5, 70.4, 372.5, 69, 371.7, 69, 372.5, 68.6, 372.5, 62.6, 368.9, 59, 366.5, 59, 366.5, 56.4, 364.5, 55.4, 364.5, 54.3, 363.3, 53.8, 362.1, 55, 360.1, 55, 360.5, 54.2, 360.5, 52.4, 360.9, 52, 364.1, 52, 367.1, 47, 368.5, 47, 368.5, 40.6, 366.9, 39, 364.1, 39, 363.1, 37, 364.5, 34.2, 364.5, 30.5, 358.5, 25.5, 358.5, 24, 356.5, 24, 356.5, 22.8, 350.3, 24, 348.8, 24, 341.6, 22, 340.3, 22, 336, 23.8, 339.9, 20, 341.5, 20, 341.5, 13.3, 338.5, 12.3, 338.5, 11.6, 342.7, 10, 344.3, 10, 345.3, 6, 346.7, 6, 345.5, -0.200012, 345.5, -3, 337.5, -3, 337.5, -4.60001, 333.5, -6.60001, 333.5, -8.3, 327.5, -6.8, 327.5, -6, 322.1, -6, 322.5, -6.8, 322.5, -9.5, 318.5, -12.5, 318.5, -14.6, 314.5, -12.6, 314.5, -12, 311.9, -12, 311.5, -12.4, 311.5, -14, 304.1, -14, 303.5, -15.2, 303.5, -16.8, 295.6, -18.8, 298, -21.1, 299.1, -20, 303.8, -20, 308.5, -23.5, 310.9, -24, 313.5, -26.6, 313.5, -28.6, 306.8, -32, 307.2, -33, 308.9, -33, 307.5, -37, 307.5, -39.2, 301.3, -38, 298.9, -38, 295.5, -41.4, 295.5, -43, 290.5, -43, 290.5, -44.2, 294.5, -45.2, 294.5, -48.3, 291.3, -52.5, 291.5, -57.6, 289.5, -58.6, 289.5, -59.7, 288.3, -60.2, 287.5, -59.4, 287.5, -62.7, 284.5, -63.7, 284.5, -65.2, 277.3, -64, 275.5, -69, 275.5, -70.9, 266.6, -72, 268.5, -73.4, 268.5, -76.4, 266.9, -78, 264.2, -78, 261.2, -87, 259.7, -87, 260.3, -90, 262.1, -90, 259.1, -96, 260, -96, 262, -99, 263.5, -99, 263.5, -102.6, 261.7, -103.5, 265.5, -105.4, 265.5, -107.4, 263.9, -109, 263.2, -109, 261.5, -113.2, 261.5, -116.6, 259.5, -117.6, 259.5, -119, 253.2, -119, 250.2, -128, 250.5, -128.6, 250.5, -130.6, 255.5, -134.5, 255.5, -136.4, 251.9, -140, 251.1, -140, 251.5, -140.8, 251.5, -144.4, 247.4, -149.6, 247.5, -151.4, 244.5, -154.4, 244.5, -156.5, 238.3, -154, 231.9, -160, 229.2, -160, 228.2, -163, 227.1, -163, 228.5, -165.8, 232.7, -167, 235.1, -167, 233.5, -170.3, 236.5, -174.7, 236.5, -176.5, 231.8, -180, 230, -180, 228, -177, 226.5, -177, 226.5, -178, 221.9, -178, 216.5, -183.4, 216.5, -185.1, 206.5, -183.9, 206.5, -182.4, 205.5, -182.7, 205.5, -184.2, 195.3, -182, 193.1, -182, 192.1, -184, 192.5, -186.9, 192.5, -188.4, 190.9, -190, 190.5, -194.6, 187.7, -196, 185.9, -196, 184.9, -194, 183.1, -194, 182.1, -196, 179.2, -196, 175.2, -193, 172.5, -193, 172.5, -198.4, 169.9, -201, 169.5, -205.6, 168.4, -206.2, 163.1, -202, 162.5, -202.4, 162.5, -205.6, 160.5, -206.6, 160.5, -208.3, 154.5, -206.8, 154.5, -208, 148.9, -208, 147.9, -206, 147.5, -209.6, 145.5, -210.6, 145.5, -212, 142.5, -212, 142.5, -213, 139, -213, 137, -210, 135.2, -210, 135.9, -207, 134.5, -208.4, 134.5, -210.6, 138.5, -214.6, 138.5, -216.5, 133.5, -220.5, 133.5, -222.3, 128.5, -221.1, 128.5, -222.5, 125.5, -224.6, 125.5, -226.6, 122, -224.9, 121.5, -225.4, 121.5, -227, 117.6, -227, 116.5, -228.4, 118.5, -230.6, 118.5, -233.4, 116.5, -235.4, 116.5, -237, 114.5, -237)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 32)
amount = 30
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector2(0, -50)
color = Color(0.0572492, 1, 0, 1)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="LiveTimer" to="." method="_on_live_timer_timeout"]
